Stay-at-bottom footer added, menu-bar z-index fix.

--- a/style.css
+++ b/style.css
@@ -40,16 +40,34 @@
 }
 
 /* Main Body CSS */
+html, body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+
 body {
   font-family: 'Kite One', sans-serif;
   color: #6C7A89;
   background-color: #ecf0f1;
-  margin: 0;
 }
 
 .container {
-  margin-top: 10%;
+  min-height: 99%;
+  position: relative;
   display: none;
+}
+
+#content {
+  padding-top: 10%;
+  padding-bottom: 50px;
+}
+
+footer {
+  width: 100%;
+  height: 50px;
+  position: absolute;
+  bottom: 0; left: 0;
 }
 
 a:link, a:visited {
@@ -68,6 +86,7 @@ a:hover, a:active {
   width: 100%;
   background-color: rgba(236, 240, 241, 0.9);
   position: fixed;
+  z-index: 1;
   top: 0;
   text-align: left;
 }
